[package]
name = "lisa"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
anyhow = "1.0.97"
dotenvy = "0.15.7"
env_logger = "0.11.7"
regex = "1.11.1"
rig-core = "0.10.0"
rig-sqlite = "0.1.7"
rusqlite = "0.32.0"
serde = "1.0.219"
sqlite-vec = "0.1.6"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tokio-rusqlite = "0.6.0"
use = "0.0.1-pre.0"
