[package]
name = "lisa"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
anyhow = "1.0.97"
dotenvy = "0.15.7"
env_logger = "0.11.7"
futures = "0.3.31"
regex = "1.11.1"
rig-core = "0.11.0"
rig-sqlite = "0.1.7"
rusqlite = "0.32.0"
serde = "1.0.219"
serde_json = "1.0.140"
sqlite-vec = "0.1.6"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tokio-rusqlite = "0.6.0"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
url = "2.5.4"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
